# Crowser

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  publish.yml
examples/: browsers.rs  commands.rs  google.rs  init.rs  javascript.rs  local.rs  manual.rs  specify.rs  window.rs
examples/local/: index.css  index.html  index.js
javascript/: ipc.js
src/: error.rs  ipc.rs  lib.rs
src/browser/: chromium.rs  firefox.rs  mod.rs
src/cdp/: commands.rs  mod.rs
src/util/: javascript.rs  mod.rs  port.rs
src/webserver/: mod.rs
