[package]
name = "crowser"
description = "Create desktop apps using user-installed browsers"
homepage = "https://github.com/SpikeHD/Crowser"
repository = "https://github.com/SpikeHD/Crowser"
keywords = [ "browser", "desktop", "app", "webview", "web", "view", "crowser" ]
categories = [ "gui", "web-programming" ]

version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"

# This is a library
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
include_dir = "0.7.4"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
phf = { version = "0.11.2", features = ["macros"] }
shared_child = "1.0.1"
signal-hook = "0.3.17"
tiny_http = "0.12.0"

[target.'cfg(target_os = "linux")'.dependencies]
which = "6.0.2"

[build-dependencies]
serde = "1.0.205"
serde_json = "1.0.122"
