[package]
name = "crowser"
description = "Create \"desktop apps\" using user-installed browsers"
readme = "README.md"
homepage = "https://github.com/SpikeHD/Crowser"
repository = "https://github.com/SpikeHD/Crowser"
keywords = [ "browser", "desktop", "app", "webview", "crowser" ]
categories = [ "gui", "web-programming" ]

version = "0.1.1"
edition = "2021"
rust-version = "1.70.0"
license = "MIT"

# This is a library
[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
flume = "0.11.0"
futures = "0.3.30"
include_dir = "0.7.4"
lazy_static = "1.5.0"
mime_guess = "2.0.5"
minreq = { version = "2.12.0", default-features = false }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
shared_child = "1.0.1"
signal-hook = "0.3.17"
tiny_http = "0.12.0"
tungstenite = "0.24.0"

[target.'cfg(target_os = "linux")'.dependencies]
which = "6.0.2"
